Revert "fixed outline problem on firefox"
This reverts commit ab97d28f24421fc569577183c1b59f88e405dccc.

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -123,20 +123,13 @@ a:focus {
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
 	color: {{ site.colors.primary }};
-		background-color: transparent;	
-	}
-
-a:focus{
-	outline: none !important;
-
+	background-color: transparent;
 }
 
 .navbar-default {
 	background-color: {{ site.colors.secondary }};
 	border-color: transparent;
-
 }
-
 
 .dropdown-menu {
 	background: {{ site.colors.secondary }};
